[package]
name = "rhg-game"
edition.workspace = true
version.workspace = true
authors.workspace = true

[[bin]]
name = "rhg_game"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
slint = "1.7.2"
rhg-engine = { path = "../engine" }
glow = { version = "0.14" }

[build-dependencies]
slint-build = "1.7.0"
