[package]
name = "rhg-engine-core"
edition.workspace = true
version.workspace = true
authors.workspace = true


[lib]
name = "rhg_engine_core"
path = "src/lib/mod.rs"

[dependencies]
as-any = "0.3.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
raw-window-handle = { version = "0.6.2", features = [
  "wasm-bindgen",
  "wasm-bindgen-0-2",
] }
# serde = { version = "1.0.210", features = ["derive"] }
