[package]
name = "rhg-engine-renderer-gl"
edition.workspace = true
version.workspace = true
authors.workspace = true

[features]
default = ["gl"]
gl = ["dep:glow"]

[lib]
name = "rhg_engine_renderer_gl"
path = "src/lib/mod.rs"

[dependencies]
as-any = "0.3.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
glow = { version = "0.14.0", optional = true }
rhg-engine-core = { path = "../core" }
raw-window-handle = { version = "0.6.2", features = [
  "wasm-bindgen",
  "wasm-bindgen-0-2",
] }
i-slint-core = "1.7.2"
# serde = { version = "1.0.210", features = ["derive"] }
